--- a/src/locales/translations.json
+++ b/src/locales/translations.json
@@ -11,26 +11,118 @@
     "hr_product": "HRプロダクト",
     "staffing": "Y社連携・業務委託",
     "see_more": "詳しく見る",
-    "learn_more": "もっと詳しく",
-    "get_started": "始める",
-    "welcome": "ようこそ",
-    "how_it_works_title": "仕組み",
-    "automated_reference_title": "自動リファレンス収集",
-    "automated_reference_desc": "候補者の参照情報を自動的に収集します",
-    "cultural_fit_ai_title": "AIカルチャーフィット分析",
-    "cultural_fit_ai_desc": "AIを活用して組織文化との適合性を分析",
-    "powered_by_ai": "AIを活用",
     "recruitment_info": "採用情報",
-    "under_construction": "工事中",
-    "under_construction_message": "このページは現在開発中です。もうしばらくお待ちください。",
-    "progress": "進捗",
-    "new_features": "新機能",
-    "exciting_features_coming": "素晴らしい新機能が間もなく登場します",
-    "improved_experience": "改善された体験",
-    "better_user_experience": "より良いユーザー体験を提供します",
-    "coming_soon": "近日公開",
-    "stay_tuned": "お楽しみに",
-    "back_to_home": "ホームに戻る"
+    "four_strengths": "Linkの4つの強み",
+    "strength_01": "Strength 01",
+    "strength_01_title": "エグゼクティブ・ハイクラス専門の転職支援",
+    "strength_01_desc": "独自のルートによる、企業の経営層との強いパイプライン\n経験豊富なコンサルタントが、独自の方法で企業の経営層やCxOと強いパイプを持ち\n日々情報をアップデートすることで、企業風土や事業戦略など、\n価値の高いリアルな情報を提供いたします。",
+    "strength_02": "Strength 02",
+    "strength_02_title": "有望スタートアップ・グロース企業のエクスクルーシブ求人",
+    "strength_02_desc": "非公開求人の紹介比率は業界最大級の63.4%\n特別な取扱いによる上記、カントリーマネージャー、CxO、事業責任者案件などの、\n他社にはないエクスクルーシブ求人が多数そろっております。",
+    "strength_03": "Strength 03",
+    "strength_03_title": "バイリンガル人材への徹底なサポート実績",
+    "strength_03_desc": "バイリンガル人材の紹介比率は業界最大級の33.4%\nバイリンガル人材の転職支援において徹底した支援体制を誇ります。\n英語面接の対策や英文レジュメの作成など専門サポートがございます。",
+    "strength_04": "Strength 04",
+    "strength_04_title": "高い内定者年次決率",
+    "strength_04_desc": "高い内定条件交渉率 年収またはタイトルアップ率94.2%\n※2024年2月時点\nご紹介企業のマネジメント層との強いリレーションによって、\nご希望に応じた給与条件や職位の獲得に貢献します。",
+    "contact_us": "CONTACT US",
+    "contact_description": "お問い合わせいただければと思います。企業として優秀な人材をお探しの方、または新しいキャリアの機会を探しているプロフェッショナルの方、RLink Partnersがあなたの次のステップをご案内します。",
+    "head_office": "Head Office",
+    "head_office_address": "本社所在地: 東京都港区白金5-5-9",
+    "get_in_touch": "Get in Touch",
+    "get_in_touch_desc": "ウェブサイトのお問い合わせフォームにご記入いただければ、担当コンサルタントより折り返しご連絡いたします。",
+    "service_corporate": "● サービスについて(法人)",
+    "service_individual": "● サービスについて(個人)",
+    "name": "お名前*",
+    "phone_number": "電話番号*",
+    "email_address": "メールアドレス*",
+    "position": "役職*",
+    "company_name": "企業名*",
+    "attachment": "添付ファイル",
+    "choose_file": "Choose File",
+    "sample_file": "Sample.docx",
+    "file_note_1": "*添付ファイルがある場合、添加してください。",
+    "file_note_2": "*許容されるファイル形式：",
+    "file_note_3": "*PDF・Word・Excel・PowerPoint、画像ファイルは10MBまで対応しております。",
+    "inquiry_details": "お問い合わせ内容",
+    "privacy_title": "個人情報の取扱いについて",
+    "privacy_text": "ご記入いただいた個人情報は、お問い合わせへの対応のみに使用します。お問い合わせへの対応、お送りいただいた資料の確認を行います。\n当社は保有する個人情報を適切に管理し、いかなる第三者にも提供いたしません。\n※詳細については「プライバシーポリシー」をご確認ください。",
+    "privacy_agree": "個人情報の取扱方針について同意する*",
+    "send": "SEND",
+    "alert_required": "必須項目をすべて入力し、プライバシーポリシーに同意してください。",
+    "alert_success": "お問い合わせありがとうございます！担当者より折り返しご連絡いたします。",
+    "mission_title": "企業理念",
+    "mission_subtitle": "Company Mission",
+    "mission_statement": "\"挑戦する企業と人の成長を支える、新しいHRインフラを\"",
+    "mission_desc_1": "Partnersは、「人と企業の可能性を最大化する」ことを使命とするHRソリューションカンパニーです。",
+    "mission_desc_2": "2021年3月の設立以来、私たちは未上場のスタートアップ企業、IPO後も成長を志す企業、そして外資系企業の\n日本法人設立・拡大支援など、挑戦と成長を続ける新興成長企業を中心にサービスを提供してきました。",
+    "mission_desc_3": "現在、日本は少子高齢化・働き方の多様化という大きな転換期を迎えており、企業は優秀な人材を惹きつける力\nが、個人は自らの可能性を発揮できる場が求められています。",
+    "mission_desc_4": "私たちはその変化に応えるため、人材紹介・派遣事業を通じて「最適なマッチング」を実現し、採用コンサルテ\nィング事業を通じて「企業の採用力そのもの」を高め、HRプロダクト事業を通じて「採用と人材活用の仕組み」\nを提供していきます。",
+    "mission_desc_5": "目指すのは、企業と人が互いに選び合い、ともに成長できる新しい時代のHRインフラを築くこと。\n人材サービスの枠を超え、挑戦する企業と個人の成長を支える\"新しい当たり前\"を創造していきます。",
+    "overview_title": "会社概要",
+    "overview_subtitle": "Company Profile",
+    "overview_company_name": "会社名",
+    "overview_company_name_value": "RLink Partners合同会社",
+    "overview_head_office_location": "本社所在地",
+    "overview_head_office_location_value": "東京都港区白金5丁目5-9",
+    "overview_representative": "代表者",
+    "overview_representative_value": "代表取締役 藤澤 尚範",
+    "overview_capital": "資本金本社",
+    "overview_capital_value": "2,000万円",
+    "overview_employees": "従業員数",
+    "overview_employees_value": "10名(業務委託含む)",
+    "overview_established": "設立日",
+    "overview_established_value": "2021年3月",
+    "overview_business_content": "事業内容",
+    "overview_business_content_value": "人材紹介・派遣事業、採用アドバイザリー事業、SaaSプロフダクト事業",
+    "overview_licenses": "許認可",
+    "overview_licenses_value": "有料職業紹介事業許可番号 13-ュ-313254\n一般労働者派遣事業許可番号 派13-315644",
+    "footer_about": "会社について",
+    "footer_company_profile": "会社概要",
+    "footer_company_history": "会社沿革",
+    "footer_services": "サービス",
+    "footer_recruitment": "人材紹介",
+    "footer_recruitment_strategy": "採用戦略アドバイザリー＆RPO",
+    "footer_hr_product": "HRプロダクト",
+    "footer_staffing": "人材派遣・業務委託",
+    "footer_news": "ニュース",
+    "footer_announcements": "お知らせ",
+    "footer_press_release": "プレスリリース",
+    "footer_media": "メディア掲載",
+    "footer_blog": "ブログ",
+    "footer_contact": "お問い合わせ",
+
+    "about_us_title": "About Us",
+    "about_us_desc_1": "Partnersは、「人と企業の可能性を最大化する」ことを使命とするHRソリューションカンパニーです。",
+    "about_us_desc_2": "2021年3月の設立以来、私たちは未上場のスタートアップ企業、IPO後も成長を志す企業、そして外資系企業の\n日本法人設立・拡大支援など、挑戦と成長を続ける新興成長企業を中心にサービスを提供してきました",
+
+    "about_us_desc_3": "現在、日本は少子高齢化・働き方の多様化という大きな転換期を迎えており、企業は優秀な人材を惹きつける力\nが、個人は自らの可能性を発揮できる場が求められています。",
+    "services_title": "サービス",
+    "services_subtitle": "Services",
+    "services_hero_desc_1": "スタートアップをはじめとする成長企業には、スピード感と柔軟性のあ\nる採用・人材活用が求められています。",
+    "services_hero_desc_2": "即戦力人材の確保から、採用戦略の仕組みづくりからの実行支援、まで\nを一気通貫で提供し、企業の成長ステー ジに応じた最適 なHRソリュー\nションを提供します。",
+    "service_recruitment_title": "人材紹介事業",
+    "service_recruitment_desc": "企業の採用ニーズに応じて、リテーナー型によるプロジェクトベースのサーチから、\n一般的なコンティンジェンシー型(完全成功報酬型)まで職種や要件に合わせて柔軟に対応します。\nコアとなるCxOや経営幹部クラスから、即戦力となるスタッフレベルまで、最適な人材をご紹介します。",
+    "service_strategy_title": "採用戦略アドバイザリー事業",
+    "service_strategy_desc": "般的なRPOの業務領域を超えた、採用の仕組みづくりから伴\n奏型で企業の採用課題を支援します",
+    "service_hr_product_title": "HRプロダクト事業",
+    "service_hr_product_desc": "「候補者の実績や人柄」をAIとデータで可視化\nし、採用の精度を高め、ミスマッチを防ぐ",
+    "service_contact_title": "Get in Touch",
+    "service_contact_desc": "We'd love to hear from you. Whether you're a company seeking top executive talent or a professional exploring new career opportunities, RLink Partners is here to guide your next step.",
+    "service_contact_button": "お問い合わせ",
+    "service_staffing_title": "人材派遣/契約・業務委託事業",
+    "service_staffing_desc": "バイリンガル人材を含む幅広い職種・レイヤーの即戦力人\n材を、スピード感をもってご紹介します。",
+    "view_more": "VIEW MORE",
+
+    "hr_product_hero_title": "HRプロダクト事業",
+    "hr_product_hero_desc": "「候補者の実績や人柄」をAIとデータで可視化し、\n採用の精度を高め、ミスマッチを防ぐ",
+    "snapp_check_title": "Snapp Check",
+    "snapp_check_subtitle": "AI搭載オンライン型リファレンスチェックサービス",
+    "snapp_check_desc_1": "人材獲得競争が激しさを増す中、早期離職やカルチャーミスマッチは企業の成長に大きな影響を及ぼします。候補者の実績や働き方を過去の上司や同僚から確認するリファレンスチェックは、こうしたリスクを未然に防ぐ有効な手段です。また、採用プロセスの透明性を確保することで、投資家やステークホルダーへの説明責任も果たせます。",
+    "snapp_check_desc_2": "従来のリファレンスチェックは、主に電話やアンケートを通じて第三者の評価を収集するもので、時間や手間がかるうえ、得られる情報の質や一貫性にばらつきがありました。一方、 Snapp CheckはAIを活用し、候補者データの検証やインサイト抽出を自動化。短期間で客観性の高い情報を提供し、スキル適性やカルチャーフィットをより正確に判断できます。",
+
+    "recruitment_hero_title": "人材紹介事業",
+    "recruitment_hero_desc": "企業の採用ニーズに応じて、リテーナー型によるプロジェクトベースのサーチから、\n一般的なコンティンジェンシー型（完全成功報酬型）まで職種や要件に合わせて柔軟に対応します。\nコアとなるCxOや経営幹部クラスから、即戦力となるスタッフレベルまで、最適な人材をご紹介します。"
   },
   "en": {
     "home": "Home",
@@ -44,25 +136,122 @@
     "hr_product": "HR Products",
     "staffing": "Staffing Services",
     "see_more": "See more",
-    "learn_more": "Learn more",
-    "get_started": "Get Started",
-    "welcome": "Welcome",
-    "how_it_works_title": "How It Works",
-    "automated_reference_title": "Automated Reference Collection",
-    "automated_reference_desc": "Automatically collect reference information from candidates",
-    "cultural_fit_ai_title": "AI Cultural Fit Analysis",
-    "cultural_fit_ai_desc": "Analyze organizational culture compatibility using AI",
-    "powered_by_ai": "Powered by AI",
     "recruitment_info": "Recruitment Info",
-    "under_construction": "Under Construction",
-    "under_construction_message": "This page is currently under development. Please check back soon.",
-    "progress": "Progress",
-    "new_features": "New Features",
-    "exciting_features_coming": "Exciting new features coming soon",
-    "improved_experience": "Improved Experience",
-    "better_user_experience": "Better user experience on the way",
-    "coming_soon": "Coming Soon",
-    "stay_tuned": "Stay tuned for updates",
-    "back_to_home": "Back to Home"
+
+    "four_strengths": "Link's 4 Strengths",
+    "strength_01": "Strength 01",
+    "strength_01_title": "Executive & High-Class Career Support",
+    "strength_01_desc": "Strong pipeline with corporate management through unique routes\nExperienced consultants have strong connections with corporate management and CxOs through unique methods\nBy updating information daily, we provide high-value, real information such as corporate culture and business strategies.",
+    "strength_02": "Strength 02",
+    "strength_02_title": "Exclusive Jobs from Promising Startups & Growth Companies",
+    "strength_02_desc": "Our confidential job introduction ratio is industry-leading at 63.4%\nWe have numerous exclusive positions not found elsewhere, including country manager, CxO, and business leader roles through special arrangements.",
+    "strength_03": "Strength 03",
+    "strength_03_title": "Thorough Support Track Record for Bilingual Talent",
+    "strength_03_desc": "Our bilingual talent introduction ratio is industry-leading at 33.4%\nWe pride ourselves on a thorough support system for bilingual talent career transitions.\nWe provide specialized support such as English interview preparation and English resume creation.",
+    "strength_04": "Strength 04",
+    "strength_04_title": "High Offer Negotiation Success Rate",
+    "strength_04_desc": "High offer negotiation rate: 94.2% salary or title increase rate\n※As of February 2024\nThrough strong relationships with management at our partner companies,\nwe contribute to obtaining salary conditions and positions that meet your expectations.",
+
+    "contact_us": "CONTACT US",
+    "contact_description": "We'd love to hear from you. Whether you're a company seeking top executive talent or a professional exploring new career opportunities, RLink Partners is here to guide your next step.",
+    "head_office": "Head Office",
+    "head_office_address": "Head Office Location: 5-5-9 Shirokane, Minato-ku, Tokyo",
+    "get_in_touch": "Get in Touch",
+    "get_in_touch_desc": "Fill out our inquiry form on our website, and one of our consultants will get back to you shortly.",
+    "service_corporate": "● Services (Corporate)",
+    "service_individual": "● Services (Individual)",
+    "name": "Name*",
+    "phone_number": "Phone Number*",
+    "email_address": "Email Address*",
+    "position": "Position*",
+    "company_name": "Company Name*",
+    "attachment": "Attachment",
+    "choose_file": "Choose File",
+    "sample_file": "Sample.docx",
+    "file_note_1": "*Please attach files if available.",
+    "file_note_2": "*Acceptable file formats:",
+    "file_note_3": "*PDF, Word, Excel, PowerPoint, image files up to 10MB are supported.",
+    "inquiry_details": "Inquiry Details",
+    "privacy_title": "Privacy Policy",
+    "privacy_text": "Personal information provided will only be used to respond to your inquiry. We will review and respond to your inquiry and any materials you send.\nWe properly manage personal information we hold and will not provide it to any third parties.\n*For details, please refer to our Privacy Policy.",
+    "privacy_agree": "I agree to the privacy policy*",
+    "send": "SEND",
+    "alert_required": "Please fill in all required fields and agree to the privacy policy.",
+    "alert_success": "Thank you for your inquiry! Our representative will contact you shortly.",
+
+    "mission_title": "Corporate Philosophy",
+    "mission_subtitle": "Company Mission",
+    "mission_statement": "\"Building a new HR infrastructure to support the growth of challenging companies and individuals\"",
+    "mission_desc_1": "Partners is an HR solutions company with a mission to maximize the potential of people and businesses.",
+    "mission_desc_2": "Since our establishment in March 2021, we have been providing services primarily to emerging growth companies, including unlisted startups, companies continuing to grow after IPO, and support for the establishment and expansion of\nJapanese subsidiaries of foreign companies.",
+    "mission_desc_3": "Currently, Japan is facing a major turning point with a declining birthrate, aging population, and diversification of work styles. Companies need the power to attract excellent talent,\nand individuals need places where they can demonstrate their potential.",
+    "mission_desc_4": "To respond to these changes, we realize \"optimal matching\" through recruitment and staffing services, enhance\n\"the company's recruitment capabilities\" through recruitment consulting, and provide \"recruitment and talent utilization systems\"\nthrough HR products.",
+    "mission_desc_5": "Our goal is to build a new era of HR infrastructure where companies and individuals can choose each other and grow together.\nWe will go beyond the boundaries of HR services and create a \"new standard\" that supports the growth of challenging companies and individuals.",
+
+    "overview_title": "Company Overview",
+    "overview_subtitle": "Company Profile",
+    "overview_company_name": "Company Name",
+    "overview_company_name_value": "RLink Partners LLC",
+    "overview_head_office_location": "Head Office Location",
+    "overview_head_office_location_value": "5-5-9 Shirokane, Minato-ku, Tokyo",
+    "overview_representative": "Representative",
+    "overview_representative_value": "CEO Naonori Fujisawa",
+    "overview_capital": "Capital",
+    "overview_capital_value": "20 million yen",
+    "overview_employees": "Number of Employees",
+    "overview_employees_value": "10 (including contractors)",
+    "overview_established": "Established",
+    "overview_established_value": "March 2021",
+    "overview_business_content": "Business Content",
+    "overview_business_content_value": "Recruitment and staffing services, Recruitment advisory services, SaaS product business",
+    "overview_licenses": "Licenses",
+    "overview_licenses_value": "Fee-charging employment placement business license number 13-ュ-313254\nGeneral worker dispatching business license number 派13-315644",
+
+    "footer_about": "About Company",
+    "footer_company_profile": "Company Profile",
+    "footer_company_history": "Company History",
+    "footer_services": "Services",
+    "footer_recruitment": "Recruitment Services",
+    "footer_recruitment_strategy": "Recruitment Strategy Advisory & RPO",
+    "footer_hr_product": "HR Product",
+    "footer_staffing": "Staffing & Outsourcing",
+    "footer_news": "News",
+    "footer_announcements": "Announcements",
+    "footer_press_release": "Press Release",
+    "footer_media": "Media Coverage",
+    "footer_blog": "Blog",
+    "footer_contact": "Contact",
+
+    "about_us_title": "About Us",
+    "about_us_desc_1": "Partners is an HR solutions company with a mission to maximize the potential of people and businesses.",
+    "about_us_desc_2": "Since our establishment in March 2021, we have been providing services primarily to emerging growth companies, including unlisted startups, companies continuing to grow after IPO, and\nsupport for the establishment and expansion of Japanese subsidiaries of foreign companies",
+    "about_us_desc_3": "Currently, Japan is facing a major turning point with a declining birthrate, aging population, and diversification of work styles. Companies need the power to attract excellent talent,\nand individuals need places where they can demonstrate their potential.",
+
+    "services_title": "Services",
+    "services_subtitle": "Services",
+    "services_hero_desc_1": "Growth companies, including startups, require recruitment and talent utilization\nwith speed and flexibility.",
+    "services_hero_desc_2": "From securing immediate workforce to execution support for recruitment strategy development,\nwe provide comprehensive solutions and deliver optimal HR solutions\ntailored to the company's growth stage.",
+    "service_recruitment_title": "Recruitment Services",
+    "service_recruitment_desc": "According to corporate recruitment needs, we flexibly respond from retainer-based project searches\nto general contingency-based (fully success-based) services, tailored to job types and requirements.\nWe introduce optimal talent from core CxO and executive levels to immediate staff-level positions.",
+    "service_strategy_title": "Recruitment Strategy Advisory Services",
+    "service_strategy_desc": "Beyond traditional RPO scope, we support corporate recruitment challenges\nthrough an accompaniment model from building recruitment systems",
+    "service_hr_product_title": "HR Product Business",
+    "service_hr_product_desc": "Visualize 'candidate achievements and personality' with AI and data\nto improve recruitment accuracy and prevent mismatches",
+    "service_contact_title": "Get in Touch",
+    "service_contact_desc": "We'd love to hear from you. Whether you're a company seeking top executive talent or a professional exploring new career opportunities, RLink Partners is here to guide your next step.",
+    "service_contact_button": "Contact Us",
+    "service_staffing_title": "Staffing / Contract / Outsourcing Services",
+    "service_staffing_desc": "We introduce immediate workforce across a wide range of job types and layers,\nincluding bilingual talent, with speed and efficiency.",
+    "view_more": "VIEW MORE",
+
+    "hr_product_hero_title": "HR Product Business",
+    "hr_product_hero_desc": "Visualize 'candidate achievements and personality' with AI and data,\nimprove recruitment accuracy, and prevent mismatches",
+    "snapp_check_title": "Snapp Check",
+    "snapp_check_subtitle": "AI-Powered Online Reference Check Service",
+    "snapp_check_desc_1": "In an increasingly competitive talent market, early turnover and cultural mismatches significantly impact corporate growth. Reference checks that verify candidate achievements and work style from former supervisors and colleagues are an effective means of preventing such risks. Additionally, ensuring transparency in the hiring process helps fulfill accountability to investors and stakeholders.",
+    "snapp_check_desc_2": "Traditional reference checks primarily collect third-party evaluations through phone calls or surveys, which are time-consuming and often yield inconsistent information quality. In contrast, Snapp Check leverages AI to automate candidate data verification and insight extraction, providing highly objective information in a short period, enabling more accurate assessment of skill fit and cultural alignment.",
+    
+    "recruitment_hero_title": "Recruitment Services",
+    "recruitment_hero_desc": "According to corporate recruitment needs, we flexibly respond from retainer-based project searches\nto general contingency-based (fully success-based) services, tailored to job types and requirements.\nWe introduce optimal talent from core CxO and executive levels to immediate staff-level positions."
   }
 }
