feat: Implement translation support for various service components
- Added translation hooks to HeroSection, RecruitmentAdvisory, StrategicApproach, and Staffing components.
- Updated text content to use translations for titles, descriptions, and button labels.
- Enhanced the structure of text rendering to support line breaks in translated strings.
- Modified ServicesNav to utilize translations for navigation items.
- Updated translations.json to include new keys for all added translations.

--- a/src/locales/translations.json
+++ b/src/locales/translations.json
@@ -95,8 +95,8 @@
     "about_us_title": "About Us",
     "about_us_desc_1": "Partnersは、「人と企業の可能性を最大化する」ことを使命とするHRソリューションカンパニーです。",
     "about_us_desc_2": "2021年3月の設立以来、私たちは未上場のスタートアップ企業、IPO後も成長を志す企業、そして外資系企業の\n日本法人設立・拡大支援など、挑戦と成長を続ける新興成長企業を中心にサービスを提供してきました",
-
     "about_us_desc_3": "現在、日本は少子高齢化・働き方の多様化という大きな転換期を迎えており、企業は優秀な人材を惹きつける力\nが、個人は自らの可能性を発揮できる場が求められています。",
+
     "services_title": "サービス",
     "services_subtitle": "Services",
     "services_hero_desc_1": "スタートアップをはじめとする成長企業には、スピード感と柔軟性のあ\nる採用・人材活用が求められています。",
@@ -122,7 +122,124 @@
     "snapp_check_desc_2": "従来のリファレンスチェックは、主に電話やアンケートを通じて第三者の評価を収集するもので、時間や手間がかるうえ、得られる情報の質や一貫性にばらつきがありました。一方、 Snapp CheckはAIを活用し、候補者データの検証やインサイト抽出を自動化。短期間で客観性の高い情報を提供し、スキル適性やカルチャーフィットをより正確に判断できます。",
 
     "recruitment_hero_title": "人材紹介事業",
-    "recruitment_hero_desc": "企業の採用ニーズに応じて、リテーナー型によるプロジェクトベースのサーチから、\n一般的なコンティンジェンシー型（完全成功報酬型）まで職種や要件に合わせて柔軟に対応します。\nコアとなるCxOや経営幹部クラスから、即戦力となるスタッフレベルまで、最適な人材をご紹介します。"
+    "recruitment_hero_desc": "企業の採用ニーズに応じて、リテーナー型によるプロジェクトベースのサーチから、\n一般的なコンティンジェンシー型（完全成功報酬型）まで職種や要件に合わせて柔軟に対応します。\nコアとなるCxOや経営幹部クラスから、即戦力となるスタッフレベルまで、最適な人材をご紹介します。",
+    "nav_recruitment_business": "人材紹介事業",
+    "nav_recruitment_strategy": "採用戦略アドバイザリー事業",
+    "nav_hr_product": "HRプロダクト事業",
+    "nav_staffing": "人材派遣/契約・業務委託事業",
+    "staffing_job_categories_title": "担当職種一覧",
+    "staffing_back_office": "バックオフィス",
+    "staffing_back_office_desc": "⼀般事務、部⾨アシスタント、秘書、受付、通訳・翻訳、経理、財務、会計採⽤、労務、教育、ジェネラリスト",
+    "staffing_it": "IT",
+    "staffing_it_desc": "PM、PMO、SE、テスト、評価運用管理、ヘルプデスク",
+
+    "intro_retainer_title": "リテーナー型",
+    "intro_retainer_desc": "主に経営幹部クラスや高度専門職、またはコン\nフィデンシャル案件を対象とした採用手法で\nす。プロジェクト型で採用活動を行い、業界リ\nサーチを基にターゲットリストを作成し、ダイ\nレクトアプローチ（ヘッドハンティング）に\nよって最適な人材を探索・確保します。",
+    "intro_contingency_title": "コンティンジェンシー型",
+    "intro_contingency_desc": "幅広い職種やレイヤーを対象とした、完全\n成功報酬型の人材紹介手法です。採用決定\nまで費用が発生しないため、複数ポジショ\nンを同時に進めやすく、短期的な人材獲得\nに適しています。",
+    "strategy_hero_title": "採用戦略アドバイザリー事業",
+    "strategy_hero_desc": "般的なRPOの業務領域を超えた、採用の仕組みづくりから伴 奏型で企業の採用課題を支援します\n従来のRPOが採用プロセス管理や選考業務代行といった実務支援によるコスト削減を目的としていたのに\n対し、私たちは採用戦略の立案から伴走し、候補者への訴求力を高める採用組織の育成と、最適な業務プ\nロセスの設計を目指します。",
+    "advisory_hero_title": "事業戦略や組織への深い理解に基づく採用支援",
+    "advisory_flow_step_1": "採用戦略構築・設計",
+    "advisory_flow_step_1_item_1": "人材要件特定",
+    "advisory_flow_step_1_item_2": "採用プロセス設計",
+    "advisory_flow_step_1_item_3": "タレント獲得デザイン",
+    "advisory_flow_step_1_item_4": "採用計画立案",
+    "advisory_flow_step_2": "採用施策立案・実行",
+    "advisory_flow_step_2_item_1": "母集団マーケティング",
+    "advisory_flow_step_2_item_2": "候補者アプローチ",
+    "advisory_flow_step_2_item_3": "候補者選考/面接（CX）",
+    "advisory_flow_step_2_item_4": "候補者体験最適化",
+    "advisory_flow_step_3": "オペレーション",
+    "advisory_flow_step_3_item_1": "採用業務管理",
+    "advisory_flow_step_3_item_2": "採用プロセス運用",
+    "advisory_flow_step_3_item_3": "候補者管理",
+    "advisory_flow_step_3_item_4": "採用進捗管理",
+    "advisory_flow_step_4": "分析・最適化",
+    "advisory_flow_step_4_item_1": "採用効果分析",
+    "advisory_flow_step_4_item_2": "データドリブン改善",
+    "advisory_flow_step_4_item_3": "最適化レポート",
+
+    "strategic_approach_title": "自社採用の戦略的アプローチ、および採用ポジションの決定支援",
+    "strategic_client_heading": "クライアント概要",
+    "strategic_client_item_1": "企業：SaaS企業（シリーズB）",
+    "strategic_client_item_2": "従業員数：約50名",
+    "strategic_client_item_3": "人事部構成：採用担当1名、採用事務1名",
+    "strategic_client_item_4": "弊社チーム体制：2名",
+    "strategic_challenge_heading": "課題",
+    "strategic_challenge_item_1": "複数の採用媒体を併用した結果、効果が分散し、候補者の母集団形成ができていない",
+    "strategic_challenge_item_2": "目標採用数に対し、担当人員が不足している",
+    "strategic_challenge_item_3": "採用難易度の高いポジションに対する理解不足",
+    "services_section_title_decorator": "- サービス -",
+    "services_section_subtitle": "专业性、技術、AIを通じた人材獲得の変革",
+    "see_more_hover": "詳しく詳らてみる",
+
+    "placement_heading": "紹介実績 2025",
+    "placement_card_1_title": "ディープテック（シリーズB）",
+    "placement_card_1_desc": "経理・財務責任者（リテーナー型）\nCRO（リテーナー型）\nUI・UXエンジニア × 3\n人事部長",
+    "placement_card_2_title": "フィンテック（シリーズC）",
+    "placement_card_2_desc": "シニアソフトウェアエンジニア\nプロダクトマネージャー\nシニアセールスマネージャー（リテーナー型）",
+    "placement_card_3_title": "SaaS（シリーズB）",
+    "placement_card_3_desc": "フィールドセールス × 2\nカスタマーサクセス",
+    "placement_card_4_title": "総合系コンサルティングファーム（IPO）",
+    "placement_card_4_desc": "マネージャー × 3\n執行役員（リテーナー型）\n関西事業部責任者候補（リテーナー型）",
+    "placement_card_5_title": "SaaS（IPO）",
+    "placement_card_5_desc": "経営企画\nカスタマーサクセス",
+    "placement_card_6_title": "外資系ソフトウェア子会社（日本法人立ち上げ）",
+    "placement_card_6_desc": "プロジェクトマネージャー × 3（リテーナー型）\nセールス部長",
+    "placement_card_7_title": "外資系ロジスティクステック",
+    "placement_card_7_desc": "カントリーマネージャー（リテーナー型）",
+    "placement_footer_note": "*記載の内容は、2025年度における全実績ではなく代表的な事例を抜粋したものです",
+
+    "table_heading": "リテーナープロジェクト例",
+    "week_1": "Week 1",
+    "week_2": "Week 2",
+    "week_3": "Week 3",
+    "week_4": "Week 4",
+    "week_5": "Week 5",
+    "day_1": "Day 1",
+    "day_2": "Day 2",
+    "day_3_5": "Day 3 to 5",
+    "day_6_10": "Day 6 to 10",
+    "day_11_12": "Day 11 to 12",
+    "day_13_15": "Day 13 to 15",
+    "day_16_20": "Day 16 to 20",
+    "day_21_25": "Day 21 to 25",
+    "item_project_contract": "プロジェクト契約",
+    "item_meeting_hiring_manager": "採用責任者とのミーティング",
+    "item_kickoff_search": "キックオフサーチ",
+    "item_interviews_with_candidates": "候補者との面談",
+    "item_continue_search": "サーチを継続",
+    "item_week2_review": "Week 2 レビュー",
+    "item_first_interview_setup": "1次面接設定",
+    "item_conduct_1_2_interviews": "1～2次面接実施",
+    "item_second_to_final": "2次面接～最終面接実施",
+    "item_reference_check": "リファレンスチェック",
+    "item_offer_and_offer_meeting": "オファー/オファー面談実施",
+
+    "job_section_title": "の担当職種一覧",
+    "job_category_01_title": "経営・ビジネスリーダー職",
+    "job_category_01_item_1": "カントリーマネージャー",
+    "job_category_01_item_2": "CEO / COO / CFO / CAO",
+    "job_category_01_item_3": "経営企画",
+    "job_category_01_item_4": "事業企画",
+    "job_category_01_item_5": "戦略コンサルタント",
+    "job_category_02_title": "ビジネス・コーポレート",
+    "job_category_02_item_1": "セールス",
+    "job_category_02_item_2": "マーケティング",
+    "job_category_02_item_3": "カスタマーサクセス",
+    "job_category_02_item_4": "経理・財務",
+    "job_category_02_item_5": "サプライチェーン",
+    "job_category_02_item_6": "人事・総務",
+    "job_category_02_item_7": "法務",
+    "job_category_03_title": "テクノロジー・コンサルティング",
+    "job_category_03_item_1": "エンジニア",
+    "job_category_03_item_2": "バックエンド",
+    "job_category_03_item_3": "フロントエンド",
+    "job_category_03_item_4": "SRE",
+    "job_category_03_item_5": "PM・PMO",
+    "job_category_03_item_6": "システムエンジニア",
+    "job_category_03_item_7": "ITコンサルタント"
   },
   "en": {
     "home": "Home",
@@ -250,8 +367,128 @@
     "snapp_check_subtitle": "AI-Powered Online Reference Check Service",
     "snapp_check_desc_1": "In an increasingly competitive talent market, early turnover and cultural mismatches significantly impact corporate growth. Reference checks that verify candidate achievements and work style from former supervisors and colleagues are an effective means of preventing such risks. Additionally, ensuring transparency in the hiring process helps fulfill accountability to investors and stakeholders.",
     "snapp_check_desc_2": "Traditional reference checks primarily collect third-party evaluations through phone calls or surveys, which are time-consuming and often yield inconsistent information quality. In contrast, Snapp Check leverages AI to automate candidate data verification and insight extraction, providing highly objective information in a short period, enabling more accurate assessment of skill fit and cultural alignment.",
-    
+
     "recruitment_hero_title": "Recruitment Services",
-    "recruitment_hero_desc": "According to corporate recruitment needs, we flexibly respond from retainer-based project searches\nto general contingency-based (fully success-based) services, tailored to job types and requirements.\nWe introduce optimal talent from core CxO and executive levels to immediate staff-level positions."
+    "recruitment_hero_desc": "According to corporate recruitment needs, we flexibly respond from retainer-based project searches\nto general contingency-based (fully success-based) services, tailored to job types and requirements.\nWe introduce optimal talent from core CxO and executive levels to immediate staff-level positions.",
+
+    "nav_recruitment_business": "Recruitment Services",
+    "nav_recruitment_strategy": "Recruitment Strategy Advisory",
+    "nav_hr_product": "HR Product Business",
+    "nav_staffing": "Staffing/Contract/Outsourcing",
+
+    "staffing_job_categories_title": "Job Categories",
+    "staffing_back_office": "Back Office",
+    "staffing_back_office_desc": "General affairs, department assistant, secretary, receptionist, interpreter/translator, accounting, finance, bookkeeping, recruitment, labor management, education, generalist",
+    "staffing_it": "IT",
+    "staffing_it_desc": "PM, PMO, SE, testing, evaluation operations management, help desk",
+
+    "intro_retainer_title": "Retainer Model",
+    "intro_retainer_desc": "A recruitment method primarily targeting\nexecutive and senior specialist roles, as well\nas confidential positions. We conduct\nproject-based recruitment activities, create\ntarget lists based on industry research, and\nidentify and secure optimal talent through\ndirect approach (headhunting).",
+    "intro_contingency_title": "Contingency Model",
+    "intro_contingency_desc": "A talent introduction method based on full\nsuccess fees targeting a wide range of\npositions and levels. Since no fees are\ncharged until hiring is decided, it is easy\nto advance multiple positions simultaneously\nand is suitable for short-term talent\nacquisition.",
+
+    "placement_heading": "Placement Records 2025",
+    "placement_card_1_title": "Deep Tech (Series B)",
+    "placement_card_1_desc": "Head of Accounting & Finance (retainer)\nCRO (retainer)\nUI/UX Engineer × 3\nHead of HR",
+    "placement_card_2_title": "Fintech (Series C)",
+    "placement_card_2_desc": "Senior Software Engineer\nProduct Manager\nSenior Sales Manager (retainer)",
+    "placement_card_3_title": "SaaS (Series B)",
+    "placement_card_3_desc": "Field Sales × 2\nCustomer Success",
+    "placement_card_4_title": "Consulting Firm (IPO)",
+    "placement_card_4_desc": "Manager × 3\nExecutive Officer (retainer)\nKansai Business Head Candidate (retainer)",
+    "placement_card_5_title": "SaaS (IPO)",
+    "placement_card_5_desc": "Corporate Planning\nCustomer Success",
+    "placement_card_6_title": "Foreign Software Subsidiary (Japan Launch)",
+    "placement_card_6_desc": "Project Manager × 3 (retainer)\nHead of Sales",
+    "placement_card_7_title": "Foreign Logistics Tech",
+    "placement_card_7_desc": "Country Manager (retainer)",
+    "placement_footer_note": "*The examples shown are representative cases and do not represent all placements in 2025.",
+
+    "table_heading": "Retainer Project Example",
+    "week_1": "Week 1",
+    "week_2": "Week 2",
+    "week_3": "Week 3",
+    "week_4": "Week 4",
+    "week_5": "Week 5",
+    "day_1": "Day 1",
+    "day_2": "Day 2",
+    "day_3_5": "Day 3 to 5",
+    "day_6_10": "Day 6 to 10",
+    "day_11_12": "Day 11 to 12",
+    "day_13_15": "Day 13 to 15",
+    "day_16_20": "Day 16 to 20",
+    "day_21_25": "Day 21 to 25",
+    "item_project_contract": "Project contract",
+    "item_meeting_hiring_manager": "Meeting with hiring manager",
+    "item_kickoff_search": "Kickoff search",
+    "item_interviews_with_candidates": "Interviews with candidates",
+    "item_continue_search": "Continue search",
+    "item_week2_review": "Week 2 Review",
+    "item_first_interview_setup": "Set up 1st interviews",
+    "item_conduct_1_2_interviews": "Conduct 1st–2nd interviews",
+    "item_second_to_final": "2nd to final interviews",
+    "item_reference_check": "Reference check",
+    "item_offer_and_offer_meeting": "Offer / Offer meeting",
+
+    "job_section_title": "'s Job Categories",
+    "job_category_01_title": "Management & Business Leaders",
+    "job_category_01_item_1": "Country Manager",
+    "job_category_01_item_2": "CEO / COO / CFO / CAO",
+    "job_category_01_item_3": "Corporate Planning",
+    "job_category_01_item_4": "Business Planning",
+    "job_category_01_item_5": "Strategy Consultant",
+    "job_category_02_title": "Business & Corporate",
+    "job_category_02_item_1": "Sales",
+    "job_category_02_item_2": "Marketing",
+    "job_category_02_item_3": "Customer Success",
+    "job_category_02_item_4": "Accounting & Finance",
+    "job_category_02_item_5": "Supply Chain",
+    "job_category_02_item_6": "HR & General Affairs",
+    "job_category_02_item_7": "Legal",
+    "job_category_03_title": "Technology & Consulting",
+    "job_category_03_item_1": "Engineer",
+    "job_category_03_item_2": "Backend",
+    "job_category_03_item_3": "Frontend",
+    "job_category_03_item_4": "SRE",
+    "job_category_03_item_5": "PM・PMO",
+    "job_category_03_item_6": "System Engineer",
+
+    "strategy_hero_title": "Recruitment Strategy Advisory",
+    "strategy_hero_desc": "Beyond the traditional RPO scope, we support company recruitment challenges\n through an accompaniment-style approach starting from building recruitment systems. \nWhile traditional RPO aimed at cost reduction through operational support such as\n recruitment process management and selection work delegation, we develop\nrecruitment organizations that enhance candidate\nappeal and design optimal business processes.",
+    "advisory_hero_title": "Recruitment Support Based on Deep Understanding of Business Strategy and Organization",
+    "advisory_flow_step_1": "Recruitment Strategy\nBuilding & Design",
+    "advisory_flow_step_1_item_1": "Talent Requirements Identification",
+    "advisory_flow_step_1_item_2": "Recruitment Process Design",
+    "advisory_flow_step_1_item_3": "Talent Acquisition Design",
+    "advisory_flow_step_1_item_4": "Recruitment Plan Development",
+    "advisory_flow_step_2": "Recruitment Initiatives\nPlanning & Execution",
+    "advisory_flow_step_2_item_1": "Talent Pool Marketing",
+    "advisory_flow_step_2_item_2": "Candidate Outreach",
+    "advisory_flow_step_2_item_3": "Candidate Selection/Interview (CX)",
+    "advisory_flow_step_2_item_4": "Candidate Experience Optimization",
+    "advisory_flow_step_3": "Operations",
+    "advisory_flow_step_3_item_1": "Recruitment Task Management",
+    "advisory_flow_step_3_item_2": "Recruitment Process Operations",
+    "advisory_flow_step_3_item_3": "Candidate Management",
+    "advisory_flow_step_3_item_4": "Recruitment Progress Tracking",
+    "advisory_flow_step_4": "Analysis & Optimization",
+    "advisory_flow_step_4_item_1": "Recruitment Effectiveness Analysis",
+    "advisory_flow_step_4_item_2": "Data-Driven Improvements",
+    "advisory_flow_step_4_item_3": "Optimization Reports",
+
+    "strategic_approach_title": "Strategic Approach to In-House Recruitment and Support for Position Determination",
+    "strategic_client_heading": "Client Overview",
+    "strategic_client_item_1": "Company: SaaS Company (Series B)",
+    "strategic_client_item_2": "Employees: Approximately 50",
+    "strategic_client_item_3": "HR Structure: 1 Recruitment Manager, 1 Recruitment Administrative Staff",
+    "strategic_client_item_4": "Our Team: 2 Members",
+    "strategic_challenge_heading": "Challenge",
+    "strategic_challenge_item_1": "Using multiple recruitment channels resulted in scattered efforts and inability to form a candidate pool",
+    "strategic_challenge_item_2": "Insufficient staffing to meet recruitment targets",
+    "strategic_challenge_item_3": "Lack of understanding of high-difficulty recruitment positions",
+    "services_section_title_decorator": "- Services -",
+    "services_section_subtitle": "Transforming Talent Acquisition through Expertise, Technology, and AI",
+    "see_more_hover": "See more",
+    "placeholder": ""
   }
 }
